[tool.poetry]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = ["Domingos Graciano <115428721+kaquepa@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.4"
fastapi = "^0.115.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
taskipy = "^1.14.0"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"

[tool.taskipy.tasks]
run = "fastapi dev fast_zero/app.py"
test = "pytest -s -X --cov=fast_zero --VV"
post_test = "coverage html"

[tool.ruff]
line-length = 79
extend-exclude = ["migration"]
[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W", "PL", "PT"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
